# Naive-Bayes-Algorithm

./: .gitignore  CMakeLists.txt  README.md
data/: model.txt
src/: Feature.cpp  Feature.h  FunctionArchive.h  Load.cpp  Load.h  NaiveBayes.cpp  NaiveBayes.h  ProbabilityMap.cpp  ProbabilityMap.h  ProbabilityModel.cpp  ProbabilityModel.h  names.txt
tests/: NaiveBayesTests.cpp  NaiveBayesTests.h
